finalized profile management service